@@ -1,6 +1,7 @@
 -------------------------- aqp 0.99-8.42 (2011-10-20) --------------------------
 * stabilized S4 class, working on S4-izing all related functions
 * preliminary documentation on the new S4 classes/methods
+* logistic power peak (LPP) can now be used to generate synthetic depth functions
 
 -------------------------- aqp 0.99-8.4 (2011-10-04) --------------------------
 * minor bug fixes and enhancements in PedonPC function
